# jout

./: CMakeLists.txt  README.md
cmake/: check_charconv_support.cmake  jout_dev.cmake
code/jout/: jout.hpp
code/jout/ext/: arraylike.hpp  stdvector.hpp
example/: CMakeLists.txt  e-basic.cpp  e-custom-types.cpp
scratch/: CMakeLists.txt  scratch.cpp
test/: CMakeLists.txt  t-ext.cpp  t-helpers.hpp  t-jout.cpp
